--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -12,3 +12,5 @@ spring.datasource.hikari.data-source-properties.sslmode=require
 
 # Server port - Digital Ocean uses 8080
 server.port=8080
+
+jwt.secret=${JWT_SECRET}
